# GaPlan

./: CMakeLists.txt  build.sh
GaPlan/: CMakeLists.txt  chro.cc  chro.h  ga_tsp_test  main.cc  params.h  tips.h  utils.h
include/: public.h
test/: chro.cc  chro.h  data_type.h  ga_tsp_test  main.cc  params.h  population.cc  population.h  pts.cpp  pts.h  utils.h
test2/: CMakeLists.txt  build.sh  ga_tsp_whole_test.cc
